Add movie collection info to movies endpoint
